# oxypico

./: Cargo.toml  rust-toolchain.toml
.cargo/: config.toml
