[package]
name = "oxypico"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
defmt = "0.3"
defmt-rtt = "0.3"

fixed = "1.23.1"
fixed-macro = "1.2"
cyw43 = { git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "firmware-logs"] }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "overclock"] }
heapless = "0.8"
futures = {  version = "0.3.17",  default-features = false,   features = ["async-await", "cfg-target-has-atomic", "unstable"]}
log = "0.4"
pio-proc = "0.2"
pio = "0.2.1"
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git",version = "0.3.3", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-rp ={  git = "https://github.com/embassy-rs/embassy.git",version = "0.1.0",features = [    "defmt","unstable-traits","nightly","unstable-pac",  "time-driver","critical-section-impl"]}

embassy-sync = {  git = "https://github.com/embassy-rs/embassy.git",version = "0.4.0", features = ["defmt"]}
embassy-time = {  git = "https://github.com/embassy-rs/embassy.git",version = "0.1.5",features = ["nightly", "unstable-traits", "defmt", "defmt-timestamp-uptime"]}
embassy-futures = {  git = "https://github.com/embassy-rs/embassy.git",  version = "0.1.0"}
embedded-hal = "0.2.7"
embedded-hal-async = "1.0.0-rc.1"
embedded-hal-bus = { version = "0.1.0-rc.1", features = ["async"] }
embedded-io-async = "0.6.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
static_cell = { version = "2", features = ["nightly"]}
portable-atomic = { version = "1.5", features = ["critical-section"] }
[dependencies.embassy-embedded-hal]
git = "https://github.com/embassy-rs/embassy.git"
features = ["defmt"]
version = "0.1.0" 
